# stremio-libtorrent-server

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.gpu.yaml  compose.vpn.yaml  compose.yaml  pyproject.toml
docker/: launch.sh  nginx-locations.inc  publish.sh
docs/: DEVOPS.md  monitoring.md  protocol-map.md
docs/superpowers/specs/: 2026-07-04-playback-diagnostics-design.md
src/stremiosrv/: __init__.py  app.py  cache.py  config.py  health.py
src/stremiosrv/api/: cache.py  handshake.py  playback.py  subs.py
src/stremiosrv/stream/: fileserver.py
src/stremiosrv/torrent/: engine.py  trackers.py
tests/: test_active.py  test_adaptive.py  test_app.py  test_cache.py  test_cache_api.py  test_config.py  test_engine_resume.py  test_handshake.py  test_health.py  test_pins.py  test_remove.py  test_stats_schema.py  test_subs_routes.py  test_web_compat.py
tests/fixtures/: device-info.json  hls-video0.m3u8  hlsv2-urls.txt  hwaccel-profiler.json  network-info.json  opensubHash.json  opensubhash-urls.txt  settings.json  status.json
