[project]
name = "stremiosrv"
version = "0.2.6"
description = "Open, self-hosted Stremio streaming server (libtorrent engine + bundled web player)"
readme = "README.md"
authors = [
    { name = "Andrey Karadimov", email = "karadimov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "libtorrent>=2.0.11 ; sys_platform == 'linux'",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
stremiosrv = "stremiosrv:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires libtorrent and/or network (skipped where unavailable)"]
